--- a/src/posts/war-of-the-worlds copy 2.mdx
+++ b/src/posts/war-of-the-worlds copy 2.mdx
@@ -1,16 +1,14 @@
 ---
-title: Corn on the cob
-subtitle: 'This is a story all about how I thanked the heavens!'
+title: War of the worlds 2
+subtitle: 'A quick sound check before the show kicks off properly - testing the tech and setting the scene!'
 status: published
-date: 2021-01-27
+date: 2021-01-23
 tags: ['Testing', 'Chat', 'SoundCheck', 'IsThisOn']
 categories: ['Testing', 'Chat', 'SoundCheck', 'IsThisOn']
 url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
 ---
 
-Bacon ipsum dolor amet shoulder alcatra cupim, ribeye prosciutto flank salami tenderloin meatball kevin pork belly hamburger picanha chicken. Shankle leberkas beef ribs pork loin burgdoggen fatback. Pork belly meatloaf ground round pork, landjaeger shank beef shoulder flank salami filet mignon. Alcatra spare ribs bacon short loin frankfurter, prosciutto meatball flank boudin pastrami sausage beef ribs buffalo leberkas ham. Short loin shoulder ham chislic spare ribs. Chislic bresaola tri-tip pig bacon.
-
-Meatball tongue shoulder sirloin chicken frankfurter doner tri-tip swine shank. Boudin frankfurter cow tenderloin rump shoulder pork chop doner ribeye pork loin sirloin alcatra short ribs. Chuck cow drumstick, beef ribs bresaola jowl hamburger biltong pork belly. Brisket hamburger meatball pork belly. Andouille kielbasa strip steak pork belly ball tip bacon ham hock pork chop shank sirloin sausage pork loin jerky pork. Frankfurter strip steak.
+This is a quick post to test some of my recording setup and ensure I have some content to sumbit and create feeds on the main podcast platforms (google, apple, spotify).
 
 ## A quick audio test...to see if the world can hear me ok!
 
