updating dummy posts

--- a/src/posts/corn-on-the-cob.mdx
+++ b/src/posts/corn-on-the-cob.mdx
@@ -1,36 +1,48 @@
 ---
 title: Corn on the cob
-subtitle: 'This is a story all about how I thanked the heavens!'
-status: published
 date: 2021-01-27
-tags: ['Testing', 'Chat', 'SoundCheck', 'IsThisOn']
-categories: ['Testing', 'Chat', 'SoundCheck', 'IsThisOn']
-url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
+description: 'A description for SEO purposes'
 ---
 
-Bacon ipsum dolor amet shoulder alcatra cupim, ribeye prosciutto flank salami tenderloin meatball kevin pork belly hamburger picanha chicken. Shankle leberkas beef ribs pork loin burgdoggen fatback. Pork belly meatloaf ground round pork, landjaeger shank beef shoulder flank salami filet mignon. Alcatra spare ribs bacon short loin frankfurter, prosciutto meatball flank boudin pastrami sausage beef ribs buffalo leberkas ham. Short loin shoulder ham chislic spare ribs. Chislic bresaola tri-tip pig bacon.
+Lorem markdownum indiciine populo! Ieiuna iram per removete, pugna gutturaque
+metus minimum tendens Mopsopium?
 
-Meatball tongue shoulder sirloin chicken frankfurter doner tri-tip swine shank. Boudin frankfurter cow tenderloin rump shoulder pork chop doner ribeye pork loin sirloin alcatra short ribs. Chuck cow drumstick, beef ribs bresaola jowl hamburger biltong pork belly. Brisket hamburger meatball pork belly. Andouille kielbasa strip steak pork belly ball tip bacon ham hock pork chop shank sirloin sausage pork loin jerky pork. Frankfurter strip steak.
+1. Minus sed
+2. Tua ad parva si in in tempore
+3. Volutant accipiter conataque Thestias
+4. Arte qua hunc siquid
 
-## A quick audio test...to see if the world can hear me ok!
+## Ore superas primusque voce
 
-![Screaming into the microphone - is this thing on?](../images/podcast-unsplash.jpg)
-_Screaming into the microphone - is this thing on?_
+Colebat mea, nec ausa quod; haec patenti trunco et reddidit, nec, numquam.
+Senior ingeniosus longum _a_ suorum esse faciebat exitus minor, et casside
+altera, invicti pariter Hylen igneus at robora. Exhalat haec faciemque vocat
+viros obsita nec dixit cognoscere, lege facies fefellimus territus nudo movent.
+Dives fovi quoque medio ad ranae quod erat animantis tibi primordia stabula sua
+cum dolens umeris, et!
 
-> Non inopes ducere inmiscuit quae, sit **natis ponentem**: sunt obliquo in
-> reges quas! Fluctibus exiguas sua non desunt telo, **vixisti oculis
-> caelestia**. Felicior retia; et filius mensam: fatale aut caelo fractarum
-> accipit notus pete coronatae quod frondator e precari, es. Petis movere
-> diffugiunt Phaethon nam virgaque non aquae tamen, praecingitur tulit aris
-> levibus aut. Antris ea deducat invidia vincula ramis: sua ante et nunc obscura
-> despicit monstro tigres, Athamas.
+    clone += dviModemRestore;
+    if (runtimeMetafileBox(-1 / sli_menu_room, output_nic, memory)) {
+        compilerIcmpSoftware.iteration(program_pcb(isa, web),
+                apacheIntellectual);
+    } else {
+        pc_plug_alu += promSkin(binArchie);
+        function = outboxHeaderDenial;
+    }
+    hubDisplay(mirroredCharacter(port, 332177, data_compression) - fat_header,
+            webHalftone, podcast);
 
-## Nec et dabant
+## Inpune varas resistit vota permulsit hunc vitio
 
-Resupinus subitus **inter**, Erysicthonis solus; quoque divite Iasone: planus
-[est manebit](http://www.iacetadulantum.net/coniuge), bis. Diriguit at natum
-nostrae verentur, est [vir](http://erigiteest.io/) Vix certamina. Nisi armigerae
-remissos: quam nec furoris faterer visendae. De summo attonitus occupat defessa
-numen decidit adspicit repetunt. Certius voluitque, cetera, vinci.
+Secutum anni _flumineis suis_; dea sua sub [patietur ventis
+verruntur](http://meae.io/paulatimque). Nunc ab prima sinistrae meruit, et
+servaverat secura obest, vidit crede hoc, non! In aptos Desierat loqui; fovesque
+iactavit fortuna: latices profundi Albula.
 
-[Photo Credit: Jason Rosewell](https://unsplash.com/@jasonrosewell?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+Iam ferat, libido et fiuntque positi. Te insilit terris, errans liquido.
+
+Est inculpata dicta **non lapis pacis** distendens novis, veros, multamque
+dracones. **Enim lac est** lacrimas ait, anus **rima**: legar esse deficeret
+loqui mollibus, panda veri **habeant velut hic**? Umor Neoptolemum, quo qui
+attonitamque silvae undas caelesti orbes. Tergoris maxima ab Tyrioque et nollet
+lassaque formis, ignibus nunc.
