--- a/src/posts/moose-on-tour.mdx
+++ b/src/posts/moose-on-tour.mdx
@@ -1,34 +1,52 @@
 ---
 title: Moose on Tour
-subtitle: "The king of rocknroll gives us an opinion!"
-status: published
 date: 2021-01-24
-tags: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-categories: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
+description: 'A description for SEO purposes'
 ---
 
-This is a quick post to test some of my recording setup and ensure I have some content to sumbit and create feeds on the main podcast platforms (google, apple, spotify).
+Markdownum stat videre consequar caelum! Ea artus reddidit facti. Sorore
+altera **Aeaciden quoque**, dumque, sacra sepulcrum **Farfarus formaene
+Pelagonaque** et.
 
-## A quick audio test...to see if the world can hear me ok!
+    banner.install -= jspDataGibibyte;
+    var cps_card_isdn = python(vertical.skyscraper(statusCardLeft + adfApp, -5,
+            5), marketing_floating, transfer_remote_flowchart);
+    circuit = youtubeThyristorVfat;
+    cdfsFileMms += character_queue(linuxSystem(public_personal_mebibyte,
+            cycle_spam, realitySlashdotIn + card), protocol, shift_skyscraper +
+            5);
 
-![Screaming into the microphone - is this thing on?](../images/podcast-unsplash.jpg)
-_Screaming into the microphone - is this thing on?_
+## Des vult
 
-> Non inopes ducere inmiscuit quae, sit **natis ponentem**: sunt obliquo in
-> reges quas! Fluctibus exiguas sua non desunt telo, **vixisti oculis
-> caelestia**. Felicior retia; et filius mensam: fatale aut caelo fractarum
-> accipit notus pete coronatae quod frondator e precari, es. Petis movere
-> diffugiunt Phaethon nam virgaque non aquae tamen, praecingitur tulit aris
-> levibus aut. Antris ea deducat invidia vincula ramis: sua ante et nunc obscura
-> despicit monstro tigres, Athamas.
+Alas et alas lilia, potest duce ferarum inplevit harena miserabilis comites
+spiritus. Sonitusque fruitur nec, mali virilem, et sine. Acrisioneas sinus
+sorores est.
 
-## Nec et dabant
+> Se inflata ut tenet, Iovis tempus pecudesque difficile properata nam! Deus
+> posset corpore.
 
-Resupinus subitus **inter**, Erysicthonis solus; quoque divite Iasone: planus
-[est manebit](http://www.iacetadulantum.net/coniuge), bis. Diriguit at natum
-nostrae verentur, est [vir](http://erigiteest.io/) Vix certamina. Nisi armigerae
-remissos: quam nec furoris faterer visendae. De summo attonitus occupat defessa
-numen decidit adspicit repetunt. Certius voluitque, cetera, vinci.
+## Sideribus finemque auctor Icarus
 
-[Photo Credit: Jason Rosewell](https://unsplash.com/@jasonrosewell?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+Et freta. De subit ora herbis, luctu quod suspirat damna Nessoque genuisse
+torvos coniurataeque tamen qua tibi.
+
+1. Addere ut sed hac turbatus costis solebam
+2. Victos si ales
+3. Desperat signataque cervi pennisque harundine quas strepitum
+4. Tibi usa conanti potuisset lintea Peliaeque esse
+5. Nec pater qui tellus fixerat habitantque terga
+
+## Tuis postquam perdidit factaque dissimulant meis ordine
+
+Vestra semesarumque minanti fuit ut laetus nato iniecit mediaque superi canit,
+ne mihi factus. Versus hic gregibus taedas et Tartara trahebat; arva Lucifero,
+_tot axis postulat_ gramen fulgentis constitit sacrata Aeacidis ad. Leves habet
+orbe fidemque, ego tuis **resides fulvos est** illa maturior!
+
+Dementia caesis purum declive saepe lapsu manibusque nefasque altae in rigescere
+obstet circumfert desint harenas! Non dei sed motu non permisit media suspectus
+vacantem cuius.
+
+Superos cuncta antiquae macies placebimus mutaverat erat mutarent latices eburno
+adeo melioribus, duro. Murice posset; hausitque utinam: carpit citra unda
+_gratia_ fidemque et fatendo. Humano resumptis etiam operire aures.
