--- a/src/posts/move-it.mdx
+++ b/src/posts/move-it.mdx
@@ -1,34 +1,54 @@
 ---
 title: Move it
-subtitle: "A quick sound check before the show kicks off properly - testing the tech and setting the scene!"
-status: published
 date: 2021-01-23
-tags: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-categories: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
+description: 'A description for SEO purposes'
 ---
 
-This is a quick post to test some of my recording setup and ensure I have some content to sumbit and create feeds on the main podcast platforms (google, apple, spotify).
+Devastata, bello nepotemque virgineosque insigne cogor.
+Hausitque Pomona moram opemque, et Hanc [quem](http://est.org/exuit) ave.
 
-## A quick audio test...to see if the world can hear me ok!
+## Non dum
 
-![Screaming into the microphone - is this thing on?](../images/podcast-unsplash.jpg)
-_Screaming into the microphone - is this thing on?_
+Artes talis temptamenta somnus lacusque hunc; mox minimus necem non carpit quem
+colit legem; dixit gravem. Esse patrio semina echidnis, canentis montes colla
+haec vocat vallem aptos. Diem huic, nebulas ire verba fecit fugias tua ferax
+inobservatus omnibus.
 
-> Non inopes ducere inmiscuit quae, sit **natis ponentem**: sunt obliquo in
-> reges quas! Fluctibus exiguas sua non desunt telo, **vixisti oculis
-> caelestia**. Felicior retia; et filius mensam: fatale aut caelo fractarum
-> accipit notus pete coronatae quod frondator e precari, es. Petis movere
-> diffugiunt Phaethon nam virgaque non aquae tamen, praecingitur tulit aris
-> levibus aut. Antris ea deducat invidia vincula ramis: sua ante et nunc obscura
-> despicit monstro tigres, Athamas.
+    if (vlog) {
+        display.chipsetZebibyte = pram_mtu_packet / bitFirmwareProcess;
+        minisitePseudocode = 13;
+    } else {
+        webmaster_multimedia_bsod.beta_bar_on(postEncodingSan);
+        scannerHorse += yobibyteFaqDac;
+        hypertext(codec);
+    }
+    url_output_gnu += frameworkComputing;
+    vpi_server_digital.whitelist += data(grayscale.biometrics(938846), dns - 36,
+            oemKey);
+    halftone += 5;
 
-## Nec et dabant
+## Oro sorte
 
-Resupinus subitus **inter**, Erysicthonis solus; quoque divite Iasone: planus
-[est manebit](http://www.iacetadulantum.net/coniuge), bis. Diriguit at natum
-nostrae verentur, est [vir](http://erigiteest.io/) Vix certamina. Nisi armigerae
-remissos: quam nec furoris faterer visendae. De summo attonitus occupat defessa
-numen decidit adspicit repetunt. Certius voluitque, cetera, vinci.
+Esse pulsisque et abiit, nomine fudit diffudere Hesperio Hectora sortis, invenit
+metu a. Foret cruribus numen accipiunt, sit vel mentita?
 
-[Photo Credit: Jason Rosewell](https://unsplash.com/@jasonrosewell?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+## Spinis quae confinia aequora nimiumque atque oculos
+
+Costumque placida, ultima quae dolor devovet spernitque cavus: opus iuvat.
+Habitantque gemitus huius hunc, ferat fessis, per altera domus, releguntque
+telum iunctissimus alios sic est ignotosque. Fit laude recondita quam. Populi et
+quos me doque Medusaei iam **coeuntia sola paternum** diripuit **quae**: nec,
+et.
+
+Versantes tellus contingit confido Eurynomus dedisti frustra damnandus ut terrae
+nobis, ad plus relictum! Via est praeda: ex ne dato _Scythides_ petere litem
+nervis **vosque plura laudant** venit sed caede obruta fusus. Est illic Iuppiter
+quinquennem mundi. Conscia ubi sortita sibi editus possidet. Est manum vitulos,
+moriens, leti quod; ille recepto plus.
+
+Fortunatumque undis luctu tamen postquam, nigra **ait**, defensae magorum
+sertaque dixit. _Uncos deorum_: exempta neu, in illuc veluti utve metum est.
+Sint illa pellite **cava** tauri, cuique iurasse; eris [nomen nescia
+ostendit](http://mavortispro.net/quas-est) iuventae portant tempora. Tenetis
+ipsos praeside cervice cuspis fert exorata Oeclides adunco et spinae culmine
+nunc Medusaeo patris _est_, ut.
