--- a/src/posts/crazy-crazy-times.mdx
+++ b/src/posts/crazy-crazy-times.mdx
@@ -1,34 +1,61 @@
 ---
 title: Crazy Crazy Times
-subtitle: "When the shizz hits the fan!"
-status: published
 date: 2021-01-25
-tags: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-categories: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
+description: 'A description for SEO purposes'
 ---
 
-This is a quick post to test some of my recording setup and ensure I have some content to sumbit and create feeds on the main podcast platforms (google, apple, spotify).
+Lorem markdownum: lydia sepulcrum iubeatis tuisque mixtam et marem, sub ad
+cuspide iubar. Videoque creatus aures altera Tereus terret superum quantum
+vellemque Bisaltida.
 
-## A quick audio test...to see if the world can hear me ok!
+    var vista_zero = balancing * domain;
+    if (only_publishing_koffice(244836, -1, webSanIcann) <=
+            desktopDirectInterface) {
+        rawJava += blog_activex;
+    } else {
+        on.signaturePpmCad = php;
+        smart_plain.samba.analyst(2);
+        interactiveWizard.data.chip(menuArtificialPostscript,
+                metaConfigurationFile + ppga_adware, -3);
+    }
+    if (basicRepository(javascript_infringement_modifier) /
+            fragmentation_vfat_threading(checksum_disk_printer,
+            direct_ddr_kerning) <= ditheringSoftware) {
+        vpiLaserFlat(public, systrayHyper(4));
+        mouseArt = sambaModelContextual;
+    }
 
-![Screaming into the microphone - is this thing on?](../images/podcast-unsplash.jpg)
-_Screaming into the microphone - is this thing on?_
+Varas promere opacae et commune aevum terra moram perosus quam, _actis commune
+auras_ Astyages relinquit. Est Aiacem pensaque caelum stultae perque. Ausa quare
+**etiam eandem Iove** tectum quamquam inmurmurat ornat dignus. Plangi oracla
+numerabilis obsita quotiens falsum procubuisse sidere felix vestigia.
 
-> Non inopes ducere inmiscuit quae, sit **natis ponentem**: sunt obliquo in
-> reges quas! Fluctibus exiguas sua non desunt telo, **vixisti oculis
-> caelestia**. Felicior retia; et filius mensam: fatale aut caelo fractarum
-> accipit notus pete coronatae quod frondator e precari, es. Petis movere
-> diffugiunt Phaethon nam virgaque non aquae tamen, praecingitur tulit aris
-> levibus aut. Antris ea deducat invidia vincula ramis: sua ante et nunc obscura
-> despicit monstro tigres, Athamas.
+1. Anguemque recentes idque fugitque
+2. Omnes bracchia inposita biformis edidit peregrinaeque subsunt
+3. Certe cruciatibus
+4. Qua capillos aeris
 
-## Nec et dabant
+## Hastae concresse cadunt fidissima fraternis sorores carentem
 
-Resupinus subitus **inter**, Erysicthonis solus; quoque divite Iasone: planus
-[est manebit](http://www.iacetadulantum.net/coniuge), bis. Diriguit at natum
-nostrae verentur, est [vir](http://erigiteest.io/) Vix certamina. Nisi armigerae
-remissos: quam nec furoris faterer visendae. De summo attonitus occupat defessa
-numen decidit adspicit repetunt. Certius voluitque, cetera, vinci.
+Femur tenet non miserrima Cipus; et memor tela laesi qua: pectus te. Est
+ministro cuncta Achille alumnae Melas, torrem: solet pisce et.
 
-[Photo Credit: Jason Rosewell](https://unsplash.com/@jasonrosewell?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+Virum temerarius dirae, crura mentis; tua Mysum miracula sententia vitiatur
+rates domi contingere florem: nunc. Inde aere siccatque, sub feroque auras regna
+domitis amat ferebant Clymene iuvenum Achille, iaculabile.
+
+1. Cuncta regis
+2. Porrexit ira ignavo
+3. Terga superis potestis nexaque audito quibus crimen
+4. Pergama Iuppiter in membra
+5. Mithridateisque placidis et somnique atria pulchra ipse
+
+Timetque in [fusus mens](http://occuluit.org/). Paterna e patientia avara
+proditione cum maximus; qui herba. Vi quantum cortice quicquam, se certe Aurora:
+sed Sisyphon, sanguis meum Troades.
+
+Statione letum devovitque, **se** amissa, ingens pro criminibusque alis. Ab
+urbem glomerataque ille contigit ambitae uno nutat contulit virent. Est lacus
+sed inrita verum poterat marmore dum posita _miratur pumice opusque_. Et me spes
+herbis primus _Caenea_ Atlante dum quaeque tenebit illa. Cypron sustinet et
+imitatur aspicit, fila pro Phoebo esset isse meritumque illa.
