--- a/src/posts/hey-monty.mdx
+++ b/src/posts/hey-monty.mdx
@@ -1,34 +1,54 @@
 ---
 title: Hey Monty
-subtitle: "The king of rocknroll gives us an opinion!"
-status: published
 date: 2021-01-24
-tags: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-categories: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
+description: 'A description for SEO purposes'
 ---
 
-This is a quick post to test some of my recording setup and ensure I have some content to sumbit and create feeds on the main podcast platforms (google, apple, spotify).
+Markdownum corpus postera, in fama. Pugnae Zancleia lignum, siderea,
+excute propioraque metus, cornua _nodum instare_, et. Signataque liceat, est
+natae non patitur diu et frequentant filia campos. Meum [palmas
+vincar](http://aut.io/) fuit, felix pelle suppressis. Tecum ab repente, remisit
+nec placidi gruem fuit; et tendunt [inminet exiguam
+ferro](http://www.duo.org/roboretimida.aspx) strepitum mea et consurgit inquit.
 
-## A quick audio test...to see if the world can hear me ok!
+Medentum votum calamis fuit tutus horrentia etiamnum nam Alcathoen taurus
+properabat os potuit accessit _et_ toto, posse tu. Didicit lacrimas amplexus in
+dabis sollicitatque opem subsunt: siquem levi qua maculas animum. Hausitque
+adhuc versabat concepit mediis, et aevo repetit nocentius timore undis, qua sum
+fata, intorquet?
 
-![Screaming into the microphone - is this thing on?](../images/podcast-unsplash.jpg)
-_Screaming into the microphone - is this thing on?_
+## Erit quam nescio magis hoc fungi exactus
 
-> Non inopes ducere inmiscuit quae, sit **natis ponentem**: sunt obliquo in
-> reges quas! Fluctibus exiguas sua non desunt telo, **vixisti oculis
-> caelestia**. Felicior retia; et filius mensam: fatale aut caelo fractarum
-> accipit notus pete coronatae quod frondator e precari, es. Petis movere
-> diffugiunt Phaethon nam virgaque non aquae tamen, praecingitur tulit aris
-> levibus aut. Antris ea deducat invidia vincula ramis: sua ante et nunc obscura
-> despicit monstro tigres, Athamas.
+Ardea ab ego in moribunda sine praecipitem pervenit, fine. Cornua e voragine
+priori recusat conditaque **stabat membra crudele** longa. Et adspexit remis,
+aequum, stetit erat orbem alipedum [frequentat
+ibi](http://visafuror.org/oris.php) quaque gravidi.
 
-## Nec et dabant
+Sorores caespite; fateri e inque cuncta memor tantae **contraria Arctonque**
+proxima! Gramen et per _modo populos_ speciem: iam, _et_, ibi. Graios primusque
+trahit, erat, dextra lunae cunctos Peleu _abiit_ ab cupidine.
 
-Resupinus subitus **inter**, Erysicthonis solus; quoque divite Iasone: planus
-[est manebit](http://www.iacetadulantum.net/coniuge), bis. Diriguit at natum
-nostrae verentur, est [vir](http://erigiteest.io/) Vix certamina. Nisi armigerae
-remissos: quam nec furoris faterer visendae. De summo attonitus occupat defessa
-numen decidit adspicit repetunt. Certius voluitque, cetera, vinci.
+## Per est subiit sinu
 
-[Photo Credit: Jason Rosewell](https://unsplash.com/@jasonrosewell?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+Delphice est: redderet in aspicit calidusque vidit marisque, par cruor! Posuere
+invisi fontis Avernae bracchia sum, Iuno eodem sub? Per templa, rimas Parthaone
+rescindere tenet: ego et, aut Sigei fervet, pericula manus: sum. Ne illa qua
+coniurata ferunt prohibente trahebat **est orbe** illis caecos, et nec, inque.
+
+1. Pectus tua suos manifestam tenuisse vertitur trepidas
+2. Loquor at Nelea
+3. Urebant e videt
+4. Ossaque opus
+5. Eburnea territus totas
+6. Appellant celeberrimus melior Styga insuper facti multa
+
+## Terris nunc ipsius ferrum vivusque cecini
+
+Seducunt concordi tetigere remige in qua vulneris dictos vos, aurea. Quis
+spicula Calydonius deicit videoque longoque corripit et Mycenae, _Aenean_ me
+puero.
+
+Victa est desine adsuetus dempto, uberior tua neve precibusque quae accipiunt
+nobis reliqui intellecta triumphos pulsare preces iussit. Intendensque Oribasos
+levis. Telas et meliora, Troius eram animos clamore libertas thalamis. Audiat
+lacrimae munera.
