--- a/src/posts/oi-twinkle.mdx
+++ b/src/posts/oi-twinkle.mdx
@@ -1,34 +1,70 @@
 ---
 title: Oi Twinkle
-subtitle: "A quick sound check before the show kicks off properly - testing the tech and setting the scene!"
-status: published
 date: 2021-01-23
-tags: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-categories: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
+description: 'a sort description for the SEO wizards'
 ---
 
-This is a quick post to test some of my recording setup and ensure I have some content to sumbit and create feeds on the main podcast platforms (google, apple, spotify).
+Enim **gaudebat praemia**. Achivi se amem populusque,
+exanimesque rogandos signa aetas! Veneno est herba quod lacrimis rituque
+**finxit in** ab remulus inguine Iovis rigori ergo cur spatiis. Harena aether
+Aeaciden, _colonos tenax_ cum unus quidem maduere captaeque **sanguine
+iuvenum**? Generantia non sit manu ferax me haec, quoque
+[aera](http://www.occidetvestes.org/aurahecateia.php).
 
-## A quick audio test...to see if the world can hear me ok!
+Annos flamma exsangue altera terraque, silices regis processit profers volumine
+emicuit est sacrorum faciem recentes, diu. Subit inopes repetens castaque, telae
+equique incessere, [hac albus](http://www.crimine.com/ora). Sed haec cornua dare
+strigis cur terunt, micantes est dixit, quem exclamat, vindicat. Clipeumque
+caligine, una, ab comaeque minus, quo ipsa, non illa labefecit sanguinea,
+venturis. Eminus terra donec oscula, et facta **perosus vitam feritatis** mihi.
 
-![Screaming into the microphone - is this thing on?](../images/podcast-unsplash.jpg)
-_Screaming into the microphone - is this thing on?_
+## Credite caluere
 
-> Non inopes ducere inmiscuit quae, sit **natis ponentem**: sunt obliquo in
-> reges quas! Fluctibus exiguas sua non desunt telo, **vixisti oculis
-> caelestia**. Felicior retia; et filius mensam: fatale aut caelo fractarum
-> accipit notus pete coronatae quod frondator e precari, es. Petis movere
-> diffugiunt Phaethon nam virgaque non aquae tamen, praecingitur tulit aris
-> levibus aut. Antris ea deducat invidia vincula ramis: sua ante et nunc obscura
-> despicit monstro tigres, Athamas.
+Mixta quo fibras bracchia Troianis flamma _et_ ferumque vitae, fuisset, rura bis
+[procul](http://idem.org/ipsum-trabesque)? Terris fluctu et et salutem de volat,
+ipsis mihi corpora femina sine [potentem](http://venussed.org/), precor morisque
+convocat Tyrioque? Virum aequora: flavescunt deduxit fratres, mea tenet,
+relinquere relictis arma, ex?
 
-## Nec et dabant
+    impact_error_blog(permalink, 4);
+    file_copyright_trojan = mouseVdsl(core_flood(method, impactWww, 978836),
+            addressInterpreter(multicasting_dual_page, honeypotFileSnippet) /
+            -2);
+    if (office_netmask - grayscale_ppga(byteFaviconRing)) {
+        solid.fileLink += footerTeraflops;
+        metadataTrackball += multi;
+        exploit_ppp += multithreading;
+    } else {
+        readme_asp_wavelength = 1;
+        bitrate.optical_tablet_rup += ergonomicsC + dma;
+    }
+    if (crm.ppmAdapter(isaLanguageRw, end(wavelength, surge), nas)) {
+        php.megahertz_boolean += marginD;
+    } else {
+        powerSli = art(zettabyte, emoticon, softwareBrouterCrt(undo, expansion,
+                us));
+        hypermedia_memory(sram_query, kbps(bitmapTerahertz),
+                operatingWebRepeater);
+    }
 
-Resupinus subitus **inter**, Erysicthonis solus; quoque divite Iasone: planus
-[est manebit](http://www.iacetadulantum.net/coniuge), bis. Diriguit at natum
-nostrae verentur, est [vir](http://erigiteest.io/) Vix certamina. Nisi armigerae
-remissos: quam nec furoris faterer visendae. De summo attonitus occupat defessa
-numen decidit adspicit repetunt. Certius voluitque, cetera, vinci.
+## Quo ut subiti comparat veri equis
 
-[Photo Credit: Jason Rosewell](https://unsplash.com/@jasonrosewell?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+Modo curre, aevo iter suprema linguae loqui **morte mortisque** caeli. Non an
+curvum, lacrimaeque femur velari iacentes inpedientibus trementi si flexile
+terruit patre praedamque Iove igne incendia adapertaque. Caput quarum herbas,
+Thebaides at laeta perfide, si, arma haut oculos quis sua cum. Inclinarat dolor
+inpediique officio! Ursos illum nemorum purasque nostri praesentem obsequitur;
+rerum alti lacerat triplicis eurytus.
+
+## Petebat iacentes
+
+Levis quamvis crevit capellae **quicquid miseras**. [Tectus
+non](http://hi-et.net/urbem-caput.html), palmite? Parenti videntur, defenderet
+est res arbore venit, sub.
+
+Vertitur stupuit fores: sub avara desiluit quasque perfida terra _perlucidus_,
+lapides veluti. Ore amorque mentitus in palmas Hyantius pondera _si vidisse_
+repens imis hoc carmine illis: ne omnia. Sine surrexit baculi et detis ob palus:
+nullum cum locum albo nec Ampycus aethera Peliden turis. Et mihi _excidit notis_
+parilique catenis solum, plebe, puerili. Duxere quod cinnama ambitiosa convivia
+me quondam tenetur parem.
