--- a/src/posts/silly-dog.mdx
+++ b/src/posts/silly-dog.mdx
@@ -1,34 +1,53 @@
 ---
 title: Silly Dog
-subtitle: "The king of rocknroll gives us an opinion!"
-status: published
-date: 2021-01-24
-tags: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-categories: ["Testing", "Chat", "SoundCheck", "IsThisOn"]
-url: https://storage.googleapis.com/anothertalk-show/s1e1-sound-check.mp3
+date: 2021-01-20
+description: 'a sort description for the SEO wizards'
 ---
 
-This is a quick post to test some of my recording setup and ensure I have some content to sumbit and create feeds on the main podcast platforms (google, apple, spotify).
+Lorem markdownum exclamat vatis, dictis, numquam ora vulnus tristis laudemque
+palearia _nec_ suorum ignaram plectrumque Timoli arsisses vetabant. Portus
+scelus est dictis nec egerat sacrum, mirata nodosaque has nec stridore cortice
+percepitque graves alienae furit, et. Caenis [protinus](http://caput-imis.org/)
+Minos moenibus creatis pendere moenia! Est paelice non nata prior ingestoque
+gener matrem. Mora nisi fidensque in faciat facies!
 
-## A quick audio test...to see if the world can hear me ok!
+> **Viae non** stabat Perseus pennas armos civilia lacrimae
+> [vestros](http://natumagamemnonis.io/pondus-ramum), aeris. Materno Tempe
+> totidem **fronte**; enim dic pietatis non, acto. Facit tam illa _plumas_,
+> virentem supposito mittit induta pulmonis nec unam canities. Aures loquentem
+> obstabat, uritur aede ilia et certa aequora, agris donec quoque, et paratas
+> facta, cum.
 
-![Screaming into the microphone - is this thing on?](../images/podcast-unsplash.jpg)
-_Screaming into the microphone - is this thing on?_
+## Amplius veni Apolline inertes
 
-> Non inopes ducere inmiscuit quae, sit **natis ponentem**: sunt obliquo in
-> reges quas! Fluctibus exiguas sua non desunt telo, **vixisti oculis
-> caelestia**. Felicior retia; et filius mensam: fatale aut caelo fractarum
-> accipit notus pete coronatae quod frondator e precari, es. Petis movere
-> diffugiunt Phaethon nam virgaque non aquae tamen, praecingitur tulit aris
-> levibus aut. Antris ea deducat invidia vincula ramis: sua ante et nunc obscura
-> despicit monstro tigres, Athamas.
+Possent viro in auras [notis pulsavit](http://nullus.net/formamque.html), et
+agilis sequuntur tamen horrentia huic, omnique. Residens sceptroque _et vobis
+acrior_ amore sua arbor iterum, instantem visam, fieres. Late sed nostrum suorum
+audire cerva, nec bellum letifer, sub.
 
-## Nec et dabant
+1. Et ter hospita exstantem nequeunt
+2. Meruisse non perit nymphae
+3. Studio caligine leve sorbere
 
-Resupinus subitus **inter**, Erysicthonis solus; quoque divite Iasone: planus
-[est manebit](http://www.iacetadulantum.net/coniuge), bis. Diriguit at natum
-nostrae verentur, est [vir](http://erigiteest.io/) Vix certamina. Nisi armigerae
-remissos: quam nec furoris faterer visendae. De summo attonitus occupat defessa
-numen decidit adspicit repetunt. Certius voluitque, cetera, vinci.
+Venus videres sub alis fugis: uno in bracchia Priami medio autumnos, coepto
+faciente exigit. Collabitur [hominum quem](http://civesmutua.io/recurvo.aspx),
+sit verum tenentis an quae ipse, tamen cruentas pontus, adventuque sine.
 
-[Photo Credit: Jason Rosewell](https://unsplash.com/@jasonrosewell?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+## In iurabat
+
+Ipse videtur magis inque illi [quotiens](http://atque.net/scitetur), longave et
+duobus, est nec terras, data. Alios illa, hunc inane carminibus articulos
+Mittor! In quae _meo Quid labori_ cursibus ullis umbram confessus in posse dedit
+ille, lac nec.
+
+- Nobilitas numerum similisque lacessas attulerat cupidoque
+- Suo Ampycides locutus virum altera
+- Fugam et pueri carina
+
+Argiodus **quas fortemque parente** Aesacon sidus det, datas procul Bacchei,
+fera trahit umeris. Arcana quadriiugo dixit in serpens Hector?
+
+Iuvenesque solum. Vincta _spectatorem_, quae inque conplecti triste consequitur
+quam triformis postquam pisce comaeque nec rerum **Minervae**. Et post dicuntur
+fateri, tam est multicavo Achille, qui tela sub habet vestri et Pergama Ulixes
+mox sustinet.
