fix images in mdx

--- a/src/posts/corn-on-the-cob.mdx
+++ b/src/posts/corn-on-the-cob.mdx
@@ -14,6 +14,8 @@ metus minimum tendens Mopsopium?
 
 ## Ore superas primusque voce
 
+![The San Juan Mountains are beautiful!](../images/san-juan-mountains.jpg 'San Juan Mountains')
+
 Colebat mea, nec ausa quod; haec patenti trunco et reddidit, nec, numquam.
 Senior ingeniosus longum _a_ suorum esse faciebat exitus minor, et casside
 altera, invicti pariter Hylen igneus at robora. Exhalat haec faciemque vocat
