--- a/src/posts/hey-monty.mdx
+++ b/src/posts/hey-monty.mdx
@@ -17,7 +17,7 @@ dabis sollicitatque opem subsunt: siquem levi qua maculas animum. Hausitque
 adhuc versabat concepit mediis, et aevo repetit nocentius timore undis, qua sum
 fata, intorquet?
 
-![The San Juan Mountains are beautiful!](../images/shiprock.jpg 'San Juan Mountains')
+![The San Juan Mountains are beautiful!](../images/post-images/shiprock.jpg 'San Juan Mountains')
 
 ## Erit quam nescio magis hoc fungi exactus
 
