basic tag implementation

--- a/src/posts/corn-on-the-cob.mdx
+++ b/src/posts/corn-on-the-cob.mdx
@@ -2,7 +2,7 @@
 title: Corn on the cob
 date: 2021-01-27
 description: 'A description for SEO purposes'
-tags: ['weeknotes', 'digital', 'parkrun', family]
+tags: ['weeknotes', 'disnosaurs']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
