--- a/src/posts/crazy-crazy-times.mdx
+++ b/src/posts/crazy-crazy-times.mdx
@@ -2,6 +2,9 @@
 title: Crazy Crazy Times
 date: 2021-01-25
 description: 'A description for SEO purposes'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Lorem markdownum: lydia sepulcrum iubeatis tuisque mixtam et marem, sub ad
