--- a/src/posts/jumanji-times.mdx
+++ b/src/posts/jumanji-times.mdx
@@ -2,6 +2,9 @@
 title: Jumanji Times
 date: 2021-01-18
 description: 'a sort description for the SEO wizards'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Lorem markdownum caelum fessis, gloria alta fame fuit posita, ora vestigia
