--- a/src/posts/silly-dog.mdx
+++ b/src/posts/silly-dog.mdx
@@ -2,6 +2,9 @@
 title: Silly Dog
 date: 2021-01-20
 description: 'a sort description for the SEO wizards'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Lorem markdownum exclamat vatis, dictis, numquam ora vulnus tristis laudemque
