--- a/src/posts/hey-monty.mdx
+++ b/src/posts/hey-monty.mdx
@@ -2,6 +2,9 @@
 title: Hey Monty
 date: 2021-01-24
 description: 'A description for SEO purposes'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Markdownum corpus postera, in fama. Pugnae Zancleia lignum, siderea,
