--- a/src/posts/moose-on-tour.mdx
+++ b/src/posts/moose-on-tour.mdx
@@ -2,6 +2,9 @@
 title: Moose on Tour
 date: 2021-01-24
 description: 'A description for SEO purposes'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Markdownum stat videre consequar caelum! Ea artus reddidit facti. Sorore
