--- a/src/posts/move-it.mdx
+++ b/src/posts/move-it.mdx
@@ -2,6 +2,9 @@
 title: Move it
 date: 2021-01-23
 description: 'A description for SEO purposes'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Devastata, bello nepotemque virgineosque insigne cogor.
