--- a/src/posts/oi-twinkle.mdx
+++ b/src/posts/oi-twinkle.mdx
@@ -2,6 +2,9 @@
 title: Oi Twinkle
 date: 2021-01-23
 description: 'a sort description for the SEO wizards'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Enim **gaudebat praemia**. Achivi se amem populusque,
