--- a/src/posts/welcome-break.mdx
+++ b/src/posts/welcome-break.mdx
@@ -2,6 +2,9 @@
 title: Welcome Breaks
 date: 2021-01-19
 description: 'a sort description for the SEO wizards'
+tags: ['weeknotes', 'digital', 'parkrun']
+postImages:
+  - '../images/post-images/shiprock.jpg'
 ---
 
 Lorem markdownum neque; frater quae _sine insilit_, ferret, modo Phoce
