update tag pages and dummy content

--- a/src/posts/corn-on-the-cob.mdx
+++ b/src/posts/corn-on-the-cob.mdx
@@ -7,6 +7,7 @@ postImages:
   - '../images/post-images/shiprock.jpg'
 ---
 
+import Bio from '../components/bio'
 import { getImage, GatsbyImage } from 'gatsby-plugin-image'
 
 Lorem markdownum indiciine populo! Ieiuna iram per removete, pugna gutturaque
@@ -54,8 +55,9 @@ iactavit fortuna: latices profundi Albula.
 
 Iam ferat, libido et fiuntque positi. Te insilit terris, errans liquido.
 
-Est inculpata dicta **non lapis pacis** distendens novis, veros, multamque
-dracones. **Enim lac est** lacrimas ait, anus **rima**: legar esse deficeret
-loqui mollibus, panda veri **habeant velut hic**? Umor Neoptolemum, quo qui
-attonitamque silvae undas caelesti orbes. Tergoris maxima ab Tyrioque et nollet
-lassaque formis, ignibus nunc.
+Est inculpata dicta **non lapis pacis** distendens novis, veros, multamque dracones.
+**Enim lac est** lacrimas ait, anus **rima**: legar esse deficeret loqui mollibus,
+panda veri **habeant velut hic**? Umor Neoptolemum, quo qui attonitamque silvae undas
+caelesti orbes. Tergoris maxima ab Tyrioque et nollet lassaque formis, ignibus nunc.
+
+<Bio />
