--- a/src/posts/crazy-crazy-times.mdx
+++ b/src/posts/crazy-crazy-times.mdx
@@ -2,7 +2,7 @@
 title: Crazy Crazy Times
 date: 2021-01-25
 description: 'A description for SEO purposes'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['parkrun']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
