--- a/src/posts/move-it.mdx
+++ b/src/posts/move-it.mdx
@@ -2,7 +2,7 @@
 title: Move it
 date: 2021-01-23
 description: 'A description for SEO purposes'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['chairs', 'digital']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
