--- a/src/posts/oi-twinkle.mdx
+++ b/src/posts/oi-twinkle.mdx
@@ -2,7 +2,7 @@
 title: Oi Twinkle
 date: 2021-01-23
 description: 'a sort description for the SEO wizards'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['weeknotes']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
