--- a/src/posts/welcome-break.mdx
+++ b/src/posts/welcome-break.mdx
@@ -2,7 +2,7 @@
 title: Welcome Breaks
 date: 2021-01-19
 description: 'a sort description for the SEO wizards'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['weeknotes', 'farming']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
