--- a/src/posts/hey-monty.mdx
+++ b/src/posts/hey-monty.mdx
@@ -2,7 +2,7 @@
 title: Hey Monty
 date: 2021-01-24
 description: 'A description for SEO purposes'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['weeknotes']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
