--- a/src/posts/jumanji-times.mdx
+++ b/src/posts/jumanji-times.mdx
@@ -2,7 +2,7 @@
 title: Jumanji Times
 date: 2021-01-18
 description: 'a sort description for the SEO wizards'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['weeknotes', 'dogs']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
