--- a/src/posts/moose-on-tour.mdx
+++ b/src/posts/moose-on-tour.mdx
@@ -2,7 +2,7 @@
 title: Moose on Tour
 date: 2021-01-24
 description: 'A description for SEO purposes'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['weeknotes', 'chairs', 'parkrun']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
