--- a/src/posts/silly-dog.mdx
+++ b/src/posts/silly-dog.mdx
@@ -2,7 +2,7 @@
 title: Silly Dog
 date: 2021-01-20
 description: 'a sort description for the SEO wizards'
-tags: ['weeknotes', 'digital', 'parkrun']
+tags: ['weeknotes']
 postImages:
   - '../images/post-images/shiprock.jpg'
 ---
