adding bio component in a few dummy posts

--- a/src/posts/crazy-crazy-times.mdx
+++ b/src/posts/crazy-crazy-times.mdx
@@ -7,6 +7,8 @@ postImages:
   - '../images/post-images/shiprock.jpg'
 ---
 
+import Bio from '../components/bio'
+
 Lorem markdownum: lydia sepulcrum iubeatis tuisque mixtam et marem, sub ad
 cuspide iubar. Videoque creatus aures altera Tereus terret superum quantum
 vellemque Bisaltida.
@@ -33,10 +35,7 @@ auras_ Astyages relinquit. Est Aiacem pensaque caelum stultae perque. Ausa quare
 **etiam eandem Iove** tectum quamquam inmurmurat ornat dignus. Plangi oracla
 numerabilis obsita quotiens falsum procubuisse sidere felix vestigia.
 
-1. Anguemque recentes idque fugitque
-2. Omnes bracchia inposita biformis edidit peregrinaeque subsunt
-3. Certe cruciatibus
-4. Qua capillos aeris
+<Bio />
 
 ## Hastae concresse cadunt fidissima fraternis sorores carentem
 
