--- a/src/posts/silly-dog.mdx
+++ b/src/posts/silly-dog.mdx
@@ -7,6 +7,8 @@ postImages:
   - '../images/post-images/shiprock.jpg'
 ---
 
+import Bio from '../components/bio'
+
 Lorem markdownum exclamat vatis, dictis, numquam ora vulnus tristis laudemque
 palearia _nec_ suorum ignaram plectrumque Timoli arsisses vetabant. Portus
 scelus est dictis nec egerat sacrum, mirata nodosaque has nec stridore cortice
@@ -22,6 +24,8 @@ gener matrem. Mora nisi fidensque in faciat facies!
 > facta, cum.
 
 ## Amplius veni Apolline inertes
+
+<Bio />
 
 Possent viro in auras [notis pulsavit](http://nullus.net/formamque.html), et
 agilis sequuntur tamen horrentia huic, omnique. Residens sceptroque _et vobis
